--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2>CSS3 site reposivo de Tabela de preços</h2>
+    <h2>CSS3 site responsivo de Tabela de preços</h2>
     <div class="col">
         <ul class="price-box">
             <li class="header">SIMPLES</li>
